fix evaluation infinite array result